--- a/project.yml
+++ b/project.yml
@@ -1,10 +1,24 @@
 ---
 settings:
-  name: Catalyst migration
+  name: Active IQ Unified Manager 9.8
   internal:
     pdf_enabled: false
+    lipi_enabled: true
   prod:
     pdf_enabled: false
+  versions:
+    - name: Unified Manager
+      url: /active-iq-unified-manager-98
+      version-number: "9.8"
+    - name: Unified Manager
+      url: /active-iq-unified-manager-99
+      version-number: "9.9"
+    - name: Unified Manager
+      url: /active-iq-unified-manager-97
+      version-number: "9.7"
+    - name: Unified Manager
+      url: /oncommand-unified-manager-95
+      version-number: "9.5"
 sidebar:
   entries:
     - title: Home
