--- a/project.yml
+++ b/project.yml
@@ -33,12 +33,15 @@ sidebar:
     - section: data-protection
     - section: reporting
     - section: api-automation
-    - title: Legal
+    - title: Legal notices
       url: "/legal-notices.html"
 homepage:
   tiles:
     - title: Get started
       links:
-        - title: Manage storage using REST APIs
-          summary: This is the description of the link target
-          url: api-automation/index.html
+        - title: Release notes
+          url: /release-notes.html
+    - title: More resources
+      links:
+        - title: Documentation for the latest version of Active IQ Unified Manager
+          url: https://docs.netapp.com/us-en/active-iq-unified-manager/index.html
