--- a/data-protection/sidebar.yml
+++ b/data-protection/sidebar.yml
@@ -35,6 +35,7 @@ entries:
           details page
         url: "/data-protection/task-resynchronizing-protection-relationships-from-the-health-volume-details-page.html"
     - title: Resolving a protection job failure
+      pdf-filename: Resolving a protection job failure (data protection)
       url: "/data-protection/task-resolving-a-protection-job-failure.html"
       entries:
       - title: Identifying the problem and performing corrective actions for a failed
@@ -49,6 +50,7 @@ entries:
         protection job
       url: "/data-protection/task-identifying-the-problem-and-performing-corrective-actions-for-a-failed-protection-job.html"
   - title: Managing and monitoring protection relationships
+    pdf-filename: Managing and monitoring protection relationships (data protection)
     url: "/data-protection/concept-managing-and-monitoring-protection-relationships.html"
     entries:
     - title: Types of SnapMirror protection
@@ -170,6 +172,7 @@ entries:
     - title: Retrying a failed protection job
       url: "/data-protection/task-retrying-a-failed-protection-job.html"
     - title: Description of Protection relationships windows and dialog boxes
+      pdf-filename: Description of Protection relationships windows and dialog boxes (data protection)
       url: "/data-protection/reference-description-of-protection-relationships-window-and-dialog-boxes.html"
       entries:
       - title: Resource Pools page
