--- a/project.yml
+++ b/project.yml
@@ -3,7 +3,7 @@ settings:
   name: Active IQ Unified Manager 9.8
   internal:
     pdf_enabled: true
-    lipi_enabled: true
+    lipi_enabled: false
   prod:
     pdf_enabled: true
   versions:
