--- a/project.yml
+++ b/project.yml
@@ -25,6 +25,14 @@ sidebar:
       url: "/index.html"
     - title: Release notes
       url: "/release-notes.html"
+    - title: Get started
+      entries:
+        - title: Quick start install for VMware vSphere
+          url: /install-vapp/qsg-vapp.html
+        - title: Quick start install for Linux
+          url: /install-linux/qsg-linux.html
+        - title: Quick start install for Windows
+          url: /install-windows/qsg-windows.html  
     - section: install-vapp
     - section: install-linux
     - section: install-windows
@@ -43,7 +51,17 @@ homepage:
       links:
         - title: Release notes
           url: /release-notes.html
+        - title: Quick start install for VMware vSphere
+          url: /install-vapp/qsg-vapp.html
+        - title: Quick start install for Linux
+          url: /install-linux/qsg-linux.html
+        - title: Quick start install for Windows
+          url: /install-windows/qsg-windows.html  
     - title: More resources
       links:
+        - title: Unified Manager videos
+          url: https://www.youtube.com/playlist?list=PLdXI3bZJEw7mp3jFSg0IJgo3oeDQRY-Gl
+        - title: Unified Manager blogs 
+          url: https://www.netapp.com/blog/#q=active%20iq%20unified%20manager&t=Blogs&sort=%40publish_date_mktg%20descending&layout=card&f:@facet_language_mktg=[English] 
         - title: Documentation for the latest version of Active IQ Unified Manager
           url: https://docs.netapp.com/us-en/active-iq-unified-manager/index.html
