--- a/project.yml
+++ b/project.yml
@@ -2,10 +2,10 @@
 settings:
   name: Active IQ Unified Manager 9.8
   internal:
-    pdf_enabled: true
-    lipi_enabled: false
+    pdf-enabled: true
+    lipi-enabled: false
   prod:
-    pdf_enabled: true
+    pdf-enabled: true
   versions:
     - name: Unified Manager
       url: /active-iq-unified-manager-98
@@ -72,12 +72,52 @@ homepage:
         - title: Cluster performance
           url: performance-checker/concept-monitoring-cluster-performance-from-the-dashboard.html
         - title: QoS policy group
-          url: performance-checker/concept-managing-performance-using-qos-policy-group-information.html      
+          url: performance-checker/concept-managing-performance-using-qos-policy-group-information.html  
+    - title: Storage and object health monitoring
+      links:
+        - title: Workloads
+          url: /storage-mgmt/concept-provision-and-manage-workloads.html
+        - title: Virtual infrastructure
+          url: /storage-mgmt/concept-monitor-vmware-virtual-infrastructure.html
+        - title: MetroCluster configurations
+          url: /storage-mgmt/concept-manage-and-monitor-metrocluster-configurations.html
+        - title: Clusters and cluster object health
+          url: /health-checker/concept-manage-and-monitor-clusters-and-cluster-object-health.html
+        - title: Health thresholds
+          url: /health-checker/concept-manage-health-thresholds.html   
+    - title: Data protection monitoring
+      links:
+        - title: Set up protection relationship
+          url: /data-protection/task-set-up-protection-relationships-in-unified-manager.html
+        - title: Perform failover and failback
+          url: /data-protection/task-perform-protection-relationship-failover-and-failback.html
+        - title: Manage protection relationship
+          url: /data-protection/concept-manage-and-monitor-protection-relationships.html
+        - title: Generate reports
+          url: /reporting/concept-unified-manager-reporting.html
+    - title: Use REST APIs
+      links:
+        - title: Get started
+          url: /api-automation/concept-api-url-and-categories.html
+        - title: Access Unified Manager APIs
+          url: /api-automation/concept-rest-api-access-and-authentication-in-um-apis.html
+        - title: Access ONTAP APIs
+          url: /api-automation/concept-gateway-apis.html
+    - title: Events and alerts
+      links:
+        - title: Dashboard
+          url: /storage-mgmt/reference-dashboard-page.html
+        - title: Event workflow
+          url: /events/concept-what-happens-when-an-event-is-received.html
+        - title: Active IQ platform events
+          url: /events/concept-how-active-iq-platform-events-are-generated.html
+        - title: Events and severity types
+          url: /events/reference-list-of-events-and-severity-types.html                
     - title: More resources
       links:
         - title: Unified Manager videos
           url: https://www.youtube.com/playlist?list=PLdXI3bZJEw7mp3jFSg0IJgo3oeDQRY-Gl
         - title: Unified Manager blogs 
-          url: https://www.netapp.com/blog/#q=active%20iq%20unified%20manager&t=Blogs&sort=%40publish_date_mktg%20descending&layout=card&f:@facet_language_mktg=[English] 
+          url: https://www.netapp.com/blog/#q=active%20iq%20unified%20manager&t=Blogs&sort=%40publish-date-mktg%20descending&layout=card&f:@facet-language-mktg=[English] 
         - title: Documentation for the latest version of Active IQ Unified Manager
           url: https://docs.netapp.com/us-en/active-iq-unified-manager/index.html
