--- a/project.yml
+++ b/project.yml
@@ -21,16 +21,18 @@ settings:
       version-number: "9.5"
 sidebar:
   entries:
-    - title: Home
+    - title: Active IQ Unified Manager 9.8 docs
       url: "/index.html"
     - title: Release notes
       url: "/release-notes.html"
-    - title: Quick start install for VMware vSphere
-      url: "/qsg-vapp.html"
-    - title: Quick start install for Linux
-      url: "/qsg-linux.html"
-    - title: Quick start install for Windows
-      url: "/qsg-windows.html" 
+    - title: Get started
+      entries:  
+        - title: Quick start install for VMware vSphere
+          url: "/qsg-vapp.html"
+        - title: Quick start install for Linux
+          url: "/qsg-linux.html"
+        - title: Quick start install for Windows
+          url: "/qsg-windows.html" 
     - section: install-vapp
     - section: install-linux
     - section: install-windows
