--- a/install-linux/sidebar.yml
+++ b/install-linux/sidebar.yml
@@ -36,7 +36,7 @@ entries:
         url: "/install-linux/task-manually-configuring-the-epel-repository.html"
       - title: Manually configuring the MySQL repository
         url: "/install-linux/task-manually-configuring-the-mysql-repository.html"
-    - title: SELinux requirements for mounting <code>/opt/netapp</code> or <code>/opt/netapp/data</code>
+    - title: SELinux requirements for mounting /opt/netapp</code> or /opt/netapp/data</code>
         on an NFS or CIFS share
       url: "/install-linux/task-selinux-requirements-for-mounting-opt-netapp-or-opt-netapp-data-on-an-nfs-or-cifs-share.html"
     - title: Installing Unified Manager on Linux systems
