--- a/online-help/sidebar.yml
+++ b/online-help/sidebar.yml
@@ -1,5 +1,5 @@
 section: online-help
-title: Online Help
+title: Online help
 entries:
   - title: Introduction to Active IQ Unified Manager
     pdf-filename: Introduction to Active IQ Unified Manager (manage and monitor)
@@ -1474,10 +1474,4 @@ entries:
       url: "/online-help/reference-user-not-found.html"
     - title: Issue with adding LDAP using Other authentication services
       url: "/online-help/reference-issue-with-adding-ldap-using-other-authentication-services.html"
-  - title: Copyright and trademark
-    url: "/online-help/reference-copyright-and-trademark.html"
-    entries:
-    - title: Copyright
-      url: "/online-help/reference-copyright.html"
-    - title: Trademark
-      url: "/online-help/reference-trademark.html"
+  
