--- a/project.yml
+++ b/project.yml
@@ -1,7 +1,8 @@
 settings:
-  name: "Product Name"
+  name: "Active IQ Unified Manager 9.8"
   internal:
     pdf_enabled: true
   prod:
     pdf_enabled: true
+    harmony_enabled: true
 sidebar:
